# miniature-bassoon

./: Cargo.toml  README.md  justfile
i18n/en/: cosmic_app_template.ftl
src/: app.rs  content.rs  device.rs  main.rs  settings.rs  storage.rs  widgets.rs
